# game0

./: AGENTS.md  Cargo.toml  README.md
crates/file-anim0/: Cargo.toml
crates/file-anim0/src/: lib.rs
crates/file-core/: Cargo.toml
crates/file-core/src/: align.rs  asset_id.rs  decode.rs  encode.rs  error.rs  header.rs  lib.rs  read.rs  section.rs  view.rs  write.rs
crates/file-mesh0/: Cargo.toml  README.md
crates/file-mesh0/src/: decode.rs  encode.rs  format.rs  lib.rs  mesh0_builder.rs  mesh0_owned.rs  mesh0_reader.rs  mesh0_view.rs  owned.rs  section.rs  section_kind.rs  sections.rs  tests.rs  validate.rs  view.rs
crates/file-mesh0/src/sections/: animation_refs.rs  attachment_refs.rs  collision_refs.rs  effect_refs.rs  lod.rs  material_slots.rs  mesh_info.rs  mod.rs  render_variant.rs  skeleton_refs.rs  skinning.rs  source_debug.rs  source_features.rs
crates/file-mesh0/tests/: e2e.rs
crates/file-skeleton0/: Cargo.toml
crates/file-skeleton0/src/: lib.rs
crates/greact/: Cargo.toml
crates/greact-macros/: Cargo.toml
crates/greact-macros/src/: codegen.rs  lib.rs  parser.rs
crates/greact/examples/: hello.rs  input_basic.rs  input_ime.rs
crates/greact/src/: application.rs  cx.rs  gpu_runtime.rs  icon.rs  input_edit.rs  layout.rs  lib.rs  shared_services.rs  text_system.rs  window.rs
crates/greact/src/reactive/: effect.rs  memo.rs  mod.rs  runtime.rs  signal.rs
crates/greact/src/render/: atlas.rs  mod.rs  text.rs
crates/greact/src/render_tree/: mod.rs  node.rs
crates/greact/src/renderer/: grid.wgsl  grid_pipeline.rs  mod.rs  quad.wgsl  quad_pipeline.rs  rect_pipeline.rs  rect_sdf.wgsl  text.wgsl  text_pipeline.rs
crates/greact/src/style/: groups.rs  mod.rs  types.rs
crates/ui0/: API_REVIEW.md  Cargo.toml
crates/ui0/examples/: background_task.rs  control_flow.rs  hello_window.rs  interactive_smoke.rs  layout_gallery.rs  reactive_counter.rs  render_gallery.rs  typography_smoke.rs
crates/ui0/src/: app.rs  element.rs  lib.rs  reactive.rs  renderer.rs  ui_tree.rs  window.rs
crates/ui0/src/app/: app_context.rs  app_runtime.rs  async_runtime.rs  async_runtime_tokio.rs  context.rs  runtime.rs
crates/ui0/src/reactive/: control_flow.rs  effect.rs  memo.rs  owner.rs  region.rs  runtime.rs  signal.rs
crates/ui0/src/renderer/: batch.rs  cache.rs  gpu.rs  rect.wgsl  scene.rs  text.rs
crates/ui0/src/ui_tree/: event.rs  hit_test.rs  layout.rs  node.rs  state.rs  style.rs
crates/utils/src/: lib.rs  send_sync_unsafe_cell.rs
crates/whiteboard-app/: Cargo.toml
crates/whiteboard-app/src/: main.rs
crates/whiteboard-core/: Cargo.toml
crates/whiteboard-core/src/: commands.rs  document.rs  history.rs  lib.rs  object.rs  spatial_hash.rs  tools.rs
