[workspace]
members = [
  "crates/file-anim0",
  "crates/file-core",
  "crates/file-mesh0",
  "crates/file-skeleton0",
  "crates/ui0",
]
default-members = ["crates/ui0"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
bitflags = "2.11.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4.0"
slotmap = "1.1.1"
smallvec = { version = "1.15.1", default-features = false, features = ["union"] }
tokio = { version = "1.52.3", features = ["full"] }
wgpu = "29.0.3"
winit = "0.30.13"
