[package]
name = "file-mesh0"
version = "0.1.0"
edition = "2021"

[dependencies]
file-core = { path = "../file-core" }
file-anim0 = { path = "../file-anim0" }
file-skeleton0 = { path = "../file-skeleton0" }
bytes = "1"
thiserror = "2"
tokio = { workspace = true }

[dev-dependencies]
pollster.workspace = true
