[package]
name = "ui0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
slotmap.workspace = true
smallvec.workspace = true
taffy = { version = "0.11", default-features = false, features = ["std", "flexbox", "grid", "block_layout", "content_size"] }
tokio.workspace = true
winit.workspace = true

[[example]]
name = "hello_window"
path = "examples/hello_window.rs"

[[example]]
name = "background_task"
path = "examples/background_task.rs"
